Introduce UserSupplier concept
Add interface for app-supplied user data
Fully CDI-ify Configuration and DSLContext
Remove generated DAOs
Implement DAOs, extending jOOQ's DAOImpl
Class/package refactor
Add UserFace for app/lib comm
Remove user_account table from schema
Regenerate jOOQ code
Rework tests, providing dummy impls of interfaces
Remove UserResource, UserService, and UserServiceTest